--- a/7-slider/setup/src/index.css
+++ b/7-slider/setup/src/index.css
@@ -156,13 +156,13 @@ Slider
   margin: 0 auto;
   margin-top: 4rem;
   width: 80vw;
-  /* have to have a height */
+  /* have to have a height to use position absolute in article */
   height: 450px;
   max-width: 800px;
   text-align: center;
   position: relative;
   display: flex;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .person-img {
   border-radius: 50%;
@@ -239,16 +239,18 @@ article {
   left: 0;
   width: 100%;
   height: 100%;
-  /* opacity: 0; */
+  opacity: 0;
   transition: var(--transition);
 }
-/* article.activeSlide {
+article.activeSlide {
   opacity: 1;
   transform: translateX(0);
 }
+
 article.lastSlide {
   transform: translateX(-100%);
 }
+
 article.nextSlide {
   transform: translateX(100%);
-} */
+}
